Issue #1 got tests working

--- a/tox.ini
+++ b/tox.ini
@@ -13,34 +13,17 @@ deps=-rrequirements-dev.txt
 whitelist_externals=coverage,pip
 # See .coveragerc for list of omitted files
 commands = coverage erase
-           coverage run -a --source ./scikit-surgerytracker -m pytest -v -s ./tests/
+           coverage run -a --source ./sksurgeryarucotracker -m pytest -v -s ./tests/
            coverage report -m
 
 [testenv:lint]
 basepython=python3.6
 deps=pylint
      {[testenv]deps}
-commands=pylint --rcfile=tests/pylintrc scikit-surgerytracker
+commands=pylint --rcfile=tests/pylintrc sksurgeryarucotracker
 
 [testenv:docs]
 basepython=python3.6
 changedir = doc
 commands = sphinx-build -M html . build
 
-[testenv:installer]
-basepython=python3.6
-commands=pyinstaller --onefile scikit-surgerytracker.py --noconfirm --windowed
-
-[testenv:pip2]
-basepython=python2.7
-changedir=pip_test
-skip_install=True
-commands = pip install {posargs}
-           scikit-surgerytracker --help
-
-[testenv:pip3]
-basepython=python3.6
-changedir=pip_test
-skip_install=True
-commands = pip install {posargs}
-           scikit-surgerytracker --help
