Issue #1 put tests in lint and added installer to tox

--- a/tox.ini
+++ b/tox.ini
@@ -20,10 +20,15 @@ commands = coverage erase
 basepython=python3.6
 deps=pylint
      {[testenv]deps}
-commands=pylint --rcfile=tests/pylintrc sksurgeryarucotracker
+commands=pylint --rcfile=tests/pylintrc sksurgeryarucotracker tests
 
 [testenv:docs]
 basepython=python3.6
 changedir = doc
 commands = sphinx-build -M html . build
+
+[testenv:installer]
+basepython=python3.6
+commands=python -c "print('Installer not needed for this project.')"
+
 
