Issue #9 fixed names

--- a/doc/.gitignore
+++ b/doc/.gitignore
@@ -1,5 +1,5 @@
-/scikit-surgerytracker.rst
-/scikit-surgerytracker.*.rst
+/scikit-surgeryarucotracker.rst
+/scikit-surgeryarucotracker.*.rst
 /modules.rst
 /versioneer.rst
 /build
