--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,11 @@
 # content of: tox.ini , put in same dir as setup.py
 [tox]
-envlist = py36,lint
+envlist = py37,lint
 skipsdist = True
 
 [travis]
 python =
-  3.6: py36, docs, lint
+  3.7: py37, docs, lint
 
 [testenv]
 passenv = *
@@ -17,18 +17,18 @@ commands = coverage erase
            coverage report -m
 
 [testenv:lint]
-basepython=python3.6
+basepython=python3.7
 deps=pylint
      {[testenv]deps}
 commands=pylint --rcfile=tests/pylintrc sksurgeryarucotracker tests
 
 [testenv:docs]
-basepython=python3.6
-changedir = doc
+basepython=python3.7
+changedir = docs
 commands = sphinx-build -M html . build
 
 [testenv:installer]
-basepython=python3.6
+basepython=python3.7
 commands=python -c "print('Installer not needed for this project.')"
 
 
